gst/videocrop/gstvideocrop.h
@@ -56,6 +56,10 @@ struct _GstVideoCrop
   gint prop_right;
   gint prop_top;
   gint prop_bottom;
+  gboolean need_update;
+
+  GstVideoInfo in_info;
+  GstVideoInfo out_info;
 
   gint crop_left;
   gint crop_right;
@@ -64,8 +68,6 @@ struct _GstVideoCrop
 
   VideoCropPixelFormat  packing;
   gint macro_y_off;
-
-  GMutex lock;
 };
 
 struct _GstVideoCropClass
